# arrowshader

./: LICENSE  Makefile  README.md  pyproject.toml
src/arrowshader/: __init__.py  canvas.py  data.py  reductions.py  transfer_functions.py
src/arrowshader/backends/: __init__.py  acero.py  cudf_.py
tests/: test_data.py
